# kalibr

./: .gitignore
Schweizer-Messer/numpy_eigen/: CMakeLists.txt
Schweizer-Messer/sm_boost/src/: JobQueue.cpp  portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
Schweizer-Messer/sm_boost/test/: testFuture.cpp
Schweizer-Messer/sm_common/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_common/cmake/: export_flags.cmake
Schweizer-Messer/sm_common/src/: DebugInfo.cpp  progress_info.cpp
Schweizer-Messer/sm_common/test/: hash_id.cpp  maths.cpp  numerical_comparisons.cpp  serialization_macros.cpp
Schweizer-Messer/sm_eigen/: CMakeLists.txt  package.xml
Schweizer-Messer/sm_eigen/src/: random.cpp
Schweizer-Messer/sm_eigen/test/: EigenSerializationTests.cpp  MatrixSqrtTest.cpp
Schweizer-Messer/sm_kinematics/: CMakeLists.txt
Schweizer-Messer/sm_kinematics/src/: EulerAnglesYawPitchRoll.cpp  EulerAnglesZXY.cpp  EulerAnglesZYX.cpp  EulerRodriguez.cpp  HomogeneousPoint.cpp  RotationVector.cpp  RotationalKinematics.cpp  Transformation.cpp  UncertainHomogeneousPoint.cpp  UncertainTransformation.cpp  homogeneous_coordinates.cpp  quaternion_algebra.cpp  rotations.cpp  three_point_methods.cpp  transformations.cpp
Schweizer-Messer/sm_kinematics/test/: HomogeneousPoint.cpp  PointTestHarness.hpp  QuaternionTests.cpp  RotationalKinematicsTests.cpp  TransformationTests.cpp  UncertainHomogeneousPoint.cpp  UncertainTransformationTests.cpp  homogeneous_coordinates.cpp  test_main.cpp  three_point_methods.cpp  transformations.cpp
Schweizer-Messer/sm_logging/src/: Formatter.cpp  Logger.cpp  LoggingEvent.cpp  LoggingGlobals.cpp  StdOutLogger.cpp  Tokens.cpp  gettimeofday.hpp
Schweizer-Messer/sm_logging/test/: logTest.cpp
Schweizer-Messer/sm_matrix_archive/: CMakeLists.txt
Schweizer-Messer/sm_matrix_archive/src/: MatrixArchive.cpp
Schweizer-Messer/sm_matrix_archive/test/: TestMatrixArchive.cpp
Schweizer-Messer/sm_property_tree/src/: BoostPropertyTree.cpp  BoostPropertyTreeImplementation.cpp  BoostPropertyTreeSupport.cpp  PropertyTree.cpp  PropertyTreeImplementation.cpp
Schweizer-Messer/sm_property_tree/test/: BoostPropertyTreeImplementation.cpp
Schweizer-Messer/sm_python/src/: Logging.cpp  exportEigen.cpp  exportHomogeneousPoint.cpp  exportMatrixArchive.cpp  exportNsecTime.cpp  exportPropertyTree.cpp  exportTimestampCorrector.cpp  exportTransformation.cpp  exportUncertainVector.cpp  export_eigen_property_tree.cpp  export_homogeneous.cpp  export_kinematics_property_tree.cpp  export_quaternion_algebra.cpp  export_rotational_kinematics.cpp  export_rotations.cpp  export_transformations.cpp  module.cpp  random.cpp
Schweizer-Messer/sm_random/src/: random.cpp
Schweizer-Messer/sm_timing/src/: NsecTimeUtilities.cpp  Timer.cpp
Schweizer-Messer/sm_timing/test/: TestNsecTimeUtilities.cpp  TestTimestampCorrector.cpp
aslam_cv/aslam_cameras/src/: BackProjection.cpp  CameraGeometryBase.cpp  DepthCameraGeometry.cpp  DescriptorBase.cpp  EquidistantDistortion.cpp  FovDistortion.cpp  FrameBase.cpp  GlobalShutter.cpp  GridCalibrationTargetBase.cpp  GridCalibrationTargetCheckerboard.cpp  GridCalibrationTargetCirclegrid.cpp  GridCalibrationTargetObservation.cpp  GridDetector.cpp  Image.cpp  ImageMask.cpp  KeypointBase.cpp  Landmark.cpp  MaskedCameraGeometry.cpp  NoDistortion.cpp  NoMask.cpp  OmniCameraGeometry.cpp  PinholeCameraGeometry.cpp  PinholeRSCameraGeometry.cpp  RadialTangentialDistortion.cpp  RollingShutter.cpp  SphericalCameraGeometry.cpp  Triangulation.cpp
aslam_cv/aslam_cameras/test/: DepthCameraGeometry.cpp  DoubleSphereCameraGeometry.cpp  EquidistantDistortion.cpp  ExtendedUnifiedCameraGeometry.cpp  FovDistortion.cpp  GridCalibration.cpp  OmniCameraGeometry.cpp  PinholeCameraGeometry.cpp  RadialTangentialDistortion.cpp  Triangulation.cpp  testFrame.cpp  test_etc.cpp
aslam_cv/aslam_cameras_april/: CMakeLists.txt
aslam_cv/aslam_cameras_april/src/: GridCalibrationTargetAprilgrid.cpp  module.cpp
aslam_cv/aslam_cv_backend/src/: CameraGeometryDesignVariableContainer.cpp  GridCalibrationTargetDesignVariableContainer.cpp  NCameraSystemDesignVariableContainer.cpp
aslam_cv/aslam_cv_backend/test/: testReprojectionError.cpp
aslam_cv/aslam_cv_backend_python/src/: CameraGeometryDesignVariableContainer.cpp  GridCalibration.cpp  NCameraSystemDesignVariableContainer.cpp  helpers.hpp  module.cpp
aslam_cv/aslam_cv_error_terms/test/: TestReprojectionError.cpp
aslam_cv/aslam_cv_python/src/: CameraGeometries.cpp  CameraGeometry.cpp  CameraProjections.cpp  CameraShutters.cpp  CameraSystem.cpp  CameraSystemClasses.cpp  Descriptors.cpp  (+16 more)
aslam_cv/aslam_imgproc/: CMakeLists.txt  package.xml
aslam_offline_calibration/ethz_apriltag2/: CMakeLists.txt
aslam_offline_calibration/kalibr_cpp/: CMakeLists.txt  package.xml
aslam_offline_calibration/kalibr_cpp/include/cc/: AprilTargetParameters.h  Calibrator.h  Camera.h  CameraParameters.h  Heading.hpp  Imu.h  ImuCameraCalibrator.h  ImuParameters.h  ImuRollingShutterCameraCalibrator.h  KnotSequenceUpdateStrategy.h  RollingShutterCamera.h  RollingShutterCameraCalibrator.h  TransformationDesignVariable.h  Util.h
aslam_offline_calibration/kalibr_cpp/include/cc/implementation/: Heading.hpp
aslam_offline_calibration/kalibr_cpp/include/kalibr_errorterms/: EuclideanError.hpp
aslam_offline_calibration/kalibr_cpp/src/: AccelerometerError.cpp  AprilTargetParameters.cpp  Calibrator.cpp  Camera.cpp  CameraParameters.cpp  EuclideanError.cpp  GyroscopeError.cpp  Imu.cpp  ImuCameraCalibration.cpp  ImuCameraCalibrator.cpp  ImuParameters.cpp  ImuRollingShutterCameraCalibrator.cpp  KnotSequenceUpdateStrategy.cpp  RollingShutterCamera.cpp  RollingShutterCameraCalibrator.cpp  Util.cpp  main.cpp
aslam_offline_calibration/kalibr_cpp/src/app/: BSplineTest.cpp  ImuCameraCalibration.cpp  ImuRollingShutterCameraCalibration.cpp  RollingShutterCameraCalibration.cpp
aslam_optimizer/aslam_backend/: CMakeLists.txt
aslam_optimizer/aslam_backend_expressions/: CMakeLists.txt
aslam_optimizer/sparse_block_matrix/: CMakeLists.txt
suitesparse/: CMakeLists.txt
(+1165 files in other folders)
