<?xml version="1.0" encoding="utf-8"?>
<package format="2">
    <name>kalibr_cpp</name>
    <version>0.0.1</version>
    <description>kalibr in C++</description>
    <maintainer email="ChengCheng0829@gmail.com">Jeffery Cheng</maintainer>
    <author>Jeffery Cheng</author>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>.

    <depend>numpy_eigen</depend>
    <depend>sm_boost</depend>
    <depend>sm_common</depend>
    <depend>sm_eigen</depend>
    <depend>sm_kinematics</depend>
    <depend>sm_logging</depend>
    <depend>sm_matrix_archive</depend>
    <depend>sm_opencv</depend>
    <depend>sm_property_tree</depend>
    <depend>sm_random</depend>
    <depend>sm_time</depend>

    <depend>suitesparse</depend>

    <depend>aslam_cameras</depend>
    <depend>aslam_cameras_april</depend>
    <depend>aslam_cv</depend>
    <depend>aslam_cv_backend</depend>
    <depend>aslam_cv_error_terms</depend>
    <depend>aslam_cv_serialization</depend>
    <depend>aslam_imgproc</depend>
    <depend>aslam_time</depend>

    <depend>incremental_calibration</depend>
    <depend>aslam_splines</depend>
    <depend>bsplines</depend>

    <depend>ethz_apriltag2</depend>
    <depend>aslam_backend</depend>
    <depend>aslam_backend_expressions</depend>
    <depend>sparse_block_matrix</depend>

    <depend>aslam_frames</depend>
    <depend>opencv2_catkin</depend>
    <depend>eigen_catkin</depend>

    <depend>roscpp</depend>
    <depend>rosbag</depend>
    <depend>cv_bridge</depend>
</package>
